# openstack_unshelver_webapp

./: .gitignore  Makefile  README.md  app.py  config.example.yaml  hello.py  pyproject.toml
.github/workflows/: tests.yml
openstack_unshelver_webapp/: __init__.py  activity.py  config.py  event_logger.py  github.py  openstack_client.py  unshelve_manager.py
scripts/: ensure_dns_record.py
tests/: test_config.py  test_github.py  test_openstack_live_credentials.py  test_unshelve_manager.py
